Sun Apr  7 21:15:09 2002                        Michael Jennings (mej)

Be even more anal when dumping a buffer to a file....
----------------------------------------------------------------------
Mon Apr  8 15:29:27 2002                        Michael Jennings (mej)

Fixed a bug spotted by Laurence J. Lane <ljlane@debian.org> with color
settings not being properly saved.
----------------------------------------------------------------------
Sun Apr 14 20:55:42 2002                        Michael Jennings (mej)

Changed occurances of "noenc" to the correct keyword, "none."  Thanks
to Laurence J. Lane <ljlane@debian.org> for pointing this one out
also.
----------------------------------------------------------------------
Sun Apr 14 22:34:41 2002                        Michael Jennings (mej)

Fixed a bug spotted by Charles Clancy <tclancy@uiuc.edu> that caused
color modifiers to mistakenly be applied to the icon pixmap.
----------------------------------------------------------------------
Fri Apr 19 15:35:11 2002                        Michael Jennings (mej)

Use safe_print_string() to decode string defines before printing them
in --version output.  This fixes Debian bug #143328, submitted by
Tom Gilbert <tom@linuxbrit.co.uk>.

Also removed '~' from the CUTCHARS compiled-in default.  (It had
already been removed from the themes.)  Makes double-click selection
of URL's easier.  Requested by Laurence J. Lane <ljlane@debian.org>.
----------------------------------------------------------------------
Sun Apr 21 14:06:19 2002                        Michael Jennings (mej)

A patch from Charles Clancy <tclancy@uiuc.edu> to fix shading on
Solaris.
----------------------------------------------------------------------
Mon Apr 22 09:20:26 2002                        Michael Jennings (mej)

Fixed the use of an uninitialized variable pointed out by Azundris
<hacks@azundris.com>.
----------------------------------------------------------------------